# docker-diff

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  docker-diff  docker_diff.py  pyproject.toml  run_docker_diff.py
.github/workflows/: publish.yml
docker_diff_pkg/: __init__.py  cli.py
